add support for notifications
